--- a/bestoon/settings.py.sample
+++ b/bestoon/settings.py.sample
@@ -122,3 +122,6 @@ STATIC_URL = 'static/'
 # https://docs.djangoproject.com/en/4.1/ref/settings/#default-auto-field
 
 DEFAULT_AUTO_FIELD = 'django.db.models.BigAutoField'
+
+site-key = '6LcB3A4UAAAAAPYNHsIiuWGJwzyyYBhQ12RgIKYj'
+RECAPTCHA_SECRET_KEY= '6LeqJaQjAAAAAH9RMMjdw5dF3niRmSBzsewTorCe'
